// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadSiteConfig website with .cjs siteConfig 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "mermaid": false,
    },
    "noIndex": false,
    "onBrokenLinks": "throw",
    "onBrokenMarkdownLinks": "warn",
    "onDuplicateRoutes": "warn",
    "plugins": [],
    "presets": [],
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "",
    "themeConfig": {},
    "themes": [],
    "title": "title",
    "titleDelimiter": "|",
    "url": "https://example.com",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/docusaurus.config.cjs",
}
`;

exports[`loadSiteConfig website with valid async config 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "mermaid": false,
    },
    "noIndex": false,
    "onBrokenLinks": "throw",
    "onBrokenMarkdownLinks": "warn",
    "onDuplicateRoutes": "warn",
    "organizationName": "endiliey",
    "plugins": [],
    "presets": [],
    "projectName": "hello",
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "Hello World",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/configAsync.config.js",
}
`;

exports[`loadSiteConfig website with valid async config creator function 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "mermaid": false,
    },
    "noIndex": false,
    "onBrokenLinks": "throw",
    "onBrokenMarkdownLinks": "warn",
    "onDuplicateRoutes": "warn",
    "organizationName": "endiliey",
    "plugins": [],
    "presets": [],
    "projectName": "hello",
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "Hello World",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/createConfigAsync.config.js",
}
`;

exports[`loadSiteConfig website with valid config creator function 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [],
    "customFields": {},
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "mermaid": false,
    },
    "noIndex": false,
    "onBrokenLinks": "throw",
    "onBrokenMarkdownLinks": "warn",
    "onDuplicateRoutes": "warn",
    "organizationName": "endiliey",
    "plugins": [],
    "presets": [],
    "projectName": "hello",
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "Hello World",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/config/createConfig.config.js",
}
`;

exports[`loadSiteConfig website with valid siteConfig 1`] = `
{
  "siteConfig": {
    "baseUrl": "/",
    "baseUrlIssueBanner": true,
    "clientModules": [
      "foo.js",
    ],
    "customFields": {},
    "favicon": "img/docusaurus.ico",
    "headTags": [],
    "i18n": {
      "defaultLocale": "en",
      "localeConfigs": {},
      "locales": [
        "en",
      ],
      "path": "i18n",
    },
    "markdown": {
      "mermaid": false,
    },
    "noIndex": false,
    "onBrokenLinks": "throw",
    "onBrokenMarkdownLinks": "warn",
    "onDuplicateRoutes": "warn",
    "organizationName": "endiliey",
    "plugins": [
      [
        "@docusaurus/plugin-content-docs",
        {
          "path": "../docs",
        },
      ],
      "@docusaurus/plugin-content-pages",
    ],
    "presets": [],
    "projectName": "hello",
    "scripts": [],
    "staticDirectories": [
      "static",
    ],
    "stylesheets": [],
    "tagline": "Hello World",
    "themeConfig": {},
    "themes": [],
    "title": "Hello",
    "titleDelimiter": "|",
    "url": "https://docusaurus.io",
  },
  "siteConfigPath": "<PROJECT_ROOT>/packages/docusaurus/src/server/__tests__/__fixtures__/simple-site/docusaurus.config.js",
}
`;
